--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -16,3 +16,21 @@ html {
   background: linear-gradient(to right, #45a247, #283c86); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   padding: 1rem 2rem;
 }
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
+.modal-header {
+  border: 0 !important;
+  padding: 1rem 1.5rem 0 !important;
+}
+
+.modal-body {
+  padding: 0 2rem !important;
+}
+
+.modal-footer {
+  border: 0 !important;
+  padding: 1rem 2rem !important;
+}
